--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: >
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
-cover: "/assets/devops.jpeg"
+cover: "/assets/DevOps.jpeg"
 logo: "/assets/puppypod.png"
 
 # Build settings
@@ -54,10 +54,10 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: jekyll
+  - cat: DevOps
     desc: "Posts describing Jekyll setup techniques."
 
-  - cat: dummy
+  - cat: EKS
     desc: "Just some placeholder posts, lorem ipsum and the rest."
 
 # Social icons and sharing options
