--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "PuppyPod의 Tech 블로그입니다."
 email: sounhs2000@gmail.com
 name: 선훈식
 description: >
-  DevOps Engineer
+  DevOps 엔지니어
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
