--- a/_config.yml
+++ b/_config.yml
@@ -55,10 +55,10 @@ jekyll-archives:
 # Category descriptions (for archive pages)
 descriptions:
   - cat: DevOps
-    desc: "Posts describing Jekyll setup techniques."
+    desc: "DevOps 포스팅입니다."
 
   - cat: EKS
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
+    desc: "EKS 포스팅입니다."
 
 # Social icons and sharing options
 #
